tests/v2.1-legacy/invalid/review_req_ref_no_content_ref.aif
# VIOLATION: ATTACH:REF without CONTENT_REF
# Expected: rejected — CONTENT_REF is required when ATTACH:REF

@AIF/2.0
FROM: agent_rd
TO: agent_reviewer
TYPE: REVIEW_REQ
ID: R001
REF: T001
REPORT_TO: agent_rd
---
ARTIFACTS: [auth.py]
ATTACH: REF
ACCEPT:
  - A01: "Tests pass"
